Module3 solution - optional tasks

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -31,10 +31,10 @@ body {
 }
 
 .menu-item {
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    /*padding-left: 10px;*/
+    /*padding-right: 10px;*/
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
     background-color: #306574;
 }
 
